# bopkit

./: .gitignore  .headache.config  .headache.dirs  .ocamlformat  404.html  CHANGELOG.md  CHANGES.md  COPYING.HEADER  LICENSE  Makefile  README.md  bopkit-dev.opam  bopkit-tests.opam  bopkit.opam  docusaurus.config.js  docusaurus.config.ts  dune-project  dune-workspace-5.4  dune-workspace.5.4  headache.sh  index.html  opensearch.xml  package-lock.json  package.json  sidebarsDoc.js  sidebarsDoc.ts  sidebarsEditor.js  sidebarsEditor.ts  sidebarsProject.js  sidebarsProject.ts  sidebarsStdlib.js  sidebarsStdlib.ts  sidebarsTutorial.js  sidebarsTutorial.ts  sitemap.xml  subleq.opam  visa.opam
doc/reference/: README.md  and2_recursive.bop  blocks.md  dune  dune.inc  external-blocks.md  includes.md  index.html  memories.md  one-of-each.bop  parameters.md  parametrized-block.bop  run.t  signals-and-buses.md
doc/reference/blocks/: index.html
doc/reference/external-blocks/: index.html
doc/reference/includes/: index.html
doc/reference/memories/: index.html
doc/reference/parameters/: index.html
doc/reference/signals-and-buses/: index.html
lib/bit_utils/src/: bit_array.ml  bit_array.mli  bit_counter.ml  bit_counter.mli  bit_matrix.ml  bit_matrix.mli  bit_string_encoding.ml  bit_string_encoding.mli  dune  partial_bit.ml  partial_bit.mli  partial_bit_array.ml  partial_bit_array.mli  partial_bit_matrix.ml  partial_bit_matrix.mli
lib/bit_utils/test/: dune  test__bit_array.ml  test__bit_counter.ml  test__bit_matrix.ml  test__bit_matrix.mli  test__bit_string_encoding.ml  test__partial_bit.ml  test__partial_bit_array.ml  test__partial_bit_matrix.ml
lib/bopkit/src/: arithmetic_expression.ml  arithmetic_expression.mli  comment.ml  comment.mli  comments.ml  comments.mli  conditional_expression.ml  conditional_expression.mli  control_structure.ml  control_structure.mli  dune  eval_error.ml  eval_error.mli  expand_utils.ml  expand_utils.mli  expanded_netlist.ml  expanded_netlist.mli  interval.ml  interval.mli  netlist.ml  netlist.mli  or_eval_error.ml  or_eval_error.mli  parameter.ml  parameter.mli  parameters.ml  parameters.mli  string_with_vars.ml  string_with_vars.mli
lib/bopkit/test/: dune  test__comment.ml  test__interval.ml  test__string_with_vars.ml
lib/bopkit_bdd/src/: block.ml  block.mli  dune  ident.ml  ident.mli  muxlist.ml  muxlist.mli  muxtree.ml  muxtree.mli
lib/bopkit_bdd_cli/src/: bopkit_bdd_cli.ml  cmd_bomber.ml  cmd_checker.ml  cmd_synthesize.ml  dune
lib/bopkit_bdd_command/src/: bopkit_bdd_command.ml  cmd_bomber.ml  cmd_checker.ml  cmd_synthesize.ml  dune
lib/bopkit_block/src/: bopkit_block.ml  bopkit_block.mli  dune  lexer.mll  parser.mly  protocol.ml  protocol.mli
lib/bopkit_cds_optimizer/src/: bopkit_cds_optimizer.ml  bopkit_cds_optimizer.mli  dune
lib/bopkit_cds_optimizer/test/: dune  test__bopkit_cds_optimizer.ml
lib/bopkit_cli/src/: bopkit_cli.ml  cmd_bop2c.ml  cmd_check.ml  cmd_echo.ml  cmd_simu.ml  dune
lib/bopkit_command/src/: bopkit_command.ml  cmd_bop2c.ml  cmd_check.ml  cmd_echo.ml  cmd_echo.mli  cmd_simu.ml  cmd_simu.mli  dune
lib/bopkit_compiler/src/: block_sort.ml  block_sort.mli  bopkit_compiler.ml  bopkit_compiler.mli  config.ml  config.mli  decorated_node.ml  decorated_node.mli  dune  expanded_block.ml  expanded_block.mli  expanded_block_sort.ml  expanded_block_sort.mli  expanded_nodes.ml  expanded_nodes.mli  output_wires.ml  output_wires.mli  pass_cds.ml  pass_cds.mli  pass_expanded_block.ml  pass_expanded_block.mli  pass_expanded_netlist.ml  pass_expanded_netlist.mli  pass_expanded_nodes.ml  pass_expanded_nodes.mli  pass_external_blocks.ml  pass_external_blocks.mli  pass_includes.ml  pass_includes.mli  pass_memories.ml  pass_memories.mli  pass_name.ml  pass_name.mli  pass_parameters.ml  pass_parameters.mli  primitive.ml  primitive.mli  standalone_netlist.ml  standalone_netlist.mli
lib/bopkit_libs_stdlib/test/: dune  test__appendable_list.ml  test__appendable_list.mli
lib/bopkit_parser/src/: arithmetic.mly  bopkit_parser.ml  bopkit_parser.mli  conditional.mly  dune  lexer.mll  memory.mly  parameter.mly  parser.mly  syntax_util.ml  syntax_util.mli  tokens.mly
lib/bopkit_process/src/: dune  ident.ml  operator_name.ml  operator_name.mli  program.ml  program.mli
lib/bopkit_process_cli/src/: bopkit_process_cli.ml  bopkit_process_command.ml  dune
project/digital-watch/: README.md  dune  dune.inc  index.html  main.bop  main.t  remove_duplicates.ml  watch.bop  watch_in_c.c  watch_with_bopboard.bop
stdlib/bopboard/: README.md  bopboard.bop  dune  dune.inc  index.html
stdlib/bopboard/example/: README.md  bit_shift.bop  bitshift.bop  dune  dune.inc  index.html  lights.bop  lights_bdd.bop  pushes.bop  ram.bop  run.t
stdlib/bopboard/images/: dune  run.t
stdlib/bopboard/src/: board_state.ml  board_state.mli  bopboard.ml  cmd_check_images.ml  cmd_check_images.mli  dune  image.ml  image.mli
stdlib/pulse/: README.md  dune  dune.inc  example.bop  index.html  pulse.bop  run.t
stdlib/pulse/src/: dune  pulse.ml
stdlib/pulse/test/: dune  dune.inc  run.t
stdlib/stdlib/: README.md  dune  dune.inc  index.html  run.t  stdlib.bop
stdlib/stdlib/test/: add.bop  add.t  and.bop  and.t  andn.bop  clock_divider.bop  clock_divider.t  clock_divider2.bop  cm2.bop  cm2.t  cm4.bop  cm4.t  dune  dune.inc  (+18 more)
test/bdd/: all-star.bop  all-star.txt  dune
test/bop2c/: dune  dune-bop2c.inc  dune.inc  empty-circuit.t  empty.c  hello_ram.bop  hello_ram.c  hello_ram.t  hello_register.bop  hello_register.c  hello_register.t  hello_rom.bop  hello_rom.c  hello_rom.t
tutorial/bdd/: README.md  check.t  check_dec7.bop  check_starred.bop  dec7-tree.bop  dec7.bop  dec7.txt  dune  dune.inc  index.html  partial_specification.md  starred-tree.bop  starred.bop  starred.txt  v4-tree.bop  v4.bop  v4.txt
tutorial/functional-args/: README.md  argsfcts.bop  dune  dune.inc  index.html  main.t
tutorial/hello-world/: README.md  dune  dune.inc  hello-stdlib.bop  hello.bop  index.html
tutorial/misc/: README.md  cycle.bop  dune  dune.inc  iii.bop  index.html  main.t
(+1463 files in other folders)
