(mdx
 (package bopkit-tests)
 (deps
  (package bopkit)
  (glob_files *.bop)))

(include dune.inc)

(rule
 (target dune.inc)
 (deps
  (glob_files *.bop))
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (run %{bin:bopkit} fmt gen-dune "\%{bin:bopkit}" fmt file)
    (run dune format-dune-file)))))

(cram
 (package bopkit-tests)
 (deps
  (package bopkit)
  %{bin:bopkit}
  (glob_files *.bop)))
