(executable
 (name remove_duplicates)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Cmdlang)
 (libraries base cmdlang cmdlang-to-cmdliner cmdliner graphics stdio threads)
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))

(rule
 (alias digital-watch-simulation)
 (deps
  (package bopkit)
  watch.bop)
 (action
  (run %{bin:bopkit} simu %{dep:main.bop})))

(rule
 (with-stdout-to
  "watch.expected"
  (run %{bin:bopkit} digital-watch gen-input --gen-unit-test-output)))

(rule
 (with-stdout-to
  "watch.via-bop.output"
  (pipe-stdout
   (run %{bin:bopkit} counter --ni -N 1 -c 345600)
   (run %{bin:bopkit} simu %{dep:watch.bop} -o)
   (run %{dep:remove_duplicates.exe}))))

(rule
 (target watch_in_c.c)
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bopkit} bop2c %{dep:watch.bop} --optimize-cds=false))))

(rule
 (target watch_in_c)
 (action
  (run "gcc" -o %{target} %{dep:watch_in_c.c})))

(rule
 (with-stdout-to
  "watch.via-bop2c.output"
  (pipe-stdout
   (run %{bin:bopkit} counter --ni -N 1 -c 345600)
   (run %{dep:watch_in_c} 345600)
   (run %{dep:remove_duplicates.exe}))))

(rule
 (alias runtest)
 (action
  (diff watch.expected watch.via-bop.output)))

(rule
 (alias runtest)
 (action
  (diff watch.expected watch.via-bop2c.output)))

(include dune.inc)

(rule
 (target dune.inc)
 (deps
  (glob_files *.bop))
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (run %{bin:bopkit} fmt gen-dune "\%{bin:bopkit}" fmt file)
    (run dune format-dune-file)))))

(cram
 (package bopkit-tests)
 (deps
  (package bopkit)
  (glob_files *.bop)))

(mdx
 (package bopkit-tests)
 (deps
  (package bopkit)
  (glob_files *.bop)))
