(install
 (package bopkit)
 (section
  (site
   (bopkit stdlib)))
 (files bopboard.bop))

(include dune.inc)

(rule
 (target dune.inc.raw)
 (deps
  (glob_files *.bop))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bopkit} fmt gen-dune "\%{bin:bopkit}" fmt file))))

(rule
 (alias runtest)
 (mode promote)
 (action
  (format-dune-file dune.inc.raw dune.inc)))
