(include dune.inc)

(rule
 (target dune.inc)
 (deps
  (glob_files *.bop))
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (bash "%{bin:bopkit} fmt gen-dune -- \%{bin:bopkit} fmt file")
    (run dune format-dune-file)))))

(install
 (section
  (site
   (bopkit stdlib)))
 (files pulse.bop))

(cram
 (deps
  (package bopkit)
  (glob_files *.bop)))

(mdx
 (deps
  (package bopkit)
  (glob_files *.bop)))
