(include dune.inc)

(cram
 (deps
  (package bopkit)
  (glob_files *.bop)
  (glob_files *.txt)))

(rule
 (target all-star.bop.output)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bopkit} bdd synthesize -AD 3 -WL 8 -f %{dep:all-star.txt}))))

(rule
 (alias runtest)
 (action
  (diff all-star.bop all-star.bop.output)))
