(include dune.inc)

(rule
 (target dune.inc.gen)
 (deps
  (glob_files *.bop))
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (bash "%{bin:bopkit} fmt gen-dune -- \%{bin:bopkit} fmt file")
    (run dune format-dune-file)))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.inc.gen)))

(rule
 (copy gen-dune/main.exe gen-dune.exe))

(include dune-bop2c.inc)

(rule
 (target dune-bop2c.inc.gen)
 (deps
  gen-dune.exe
  (glob_files *.bop))
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (bash "./gen-dune.exe")
    (run dune format-dune-file)))))

(rule
 (alias runtest)
 (action
  (diff dune-bop2c.inc dune-bop2c.inc.gen)))

(cram
 (deps
  (package bopkit)
  %{bin:bopkit}
  (glob_files *.exe)
  (glob_files *.bop)))
