(include dune.inc)

(rule
 (target dune.inc)
 (deps
  (glob_files *.bop))
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (bash "%{bin:bopkit} fmt gen-dune -- \%{bin:bopkit} fmt file")
    (run dune format-dune-file)))))

(rule
 (copy gen-dune/main.exe gen-dune.exe))

(include dune-bop2c.inc)

(rule
 (target dune-bop2c.inc)
 (deps
  gen-dune.exe
  (glob_files *.bop))
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (bash "./gen-dune.exe")
    (run dune format-dune-file)))))

(cram
 (deps
  (package bopkit)
  %{bin:bopkit}
  (glob_files *.exe)
  (glob_files *.bop)))
