(include dune.inc)

(rule
 (target dune.inc.raw)
 (deps
  (glob_files *.bop))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bopkit} fmt gen-dune "\%{bin:bopkit}" fmt file))))

(rule
 (alias runtest)
 (mode promote)
 (action
  (format-dune-file dune.inc.raw dune.inc)))

(rule
 (copy gen-dune/main.exe gen-dune.exe))

(include dune-bop2c.inc)

(rule
 (target dune-bop2c.inc.raw)
 (deps
  (glob_files *.bop))
 (action
  (with-stdout-to
   %{target}
   (run %{dep:gen-dune.exe}))))

(rule
 (alias runtest)
 (mode promote)
 (action
  (format-dune-file dune-bop2c.inc.raw dune-bop2c.inc)))

(cram
 (package bopkit-tests)
 (deps
  (package bopkit)
  %{bin:bopkit}
  (glob_files *.exe)
  (glob_files *.bop)))
