(cram
 (deps
  (package bopkit)
  (glob_files *.bop)))

(include dune.inc)

(rule
 (deps
  (glob_files *.bop))
 (action
  (with-stdout-to
   dune.inc.gen
   (pipe-stdout
    (bash "%{bin:bopkit} fmt gen-dune -- \%{bin:bopkit} fmt file")
    (run dune format-dune-file)))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.inc.gen)))

(mdx
 (deps
  (package bopkit)
  (glob_files *.bop)))
