(include dune.inc)

(rule
 (target dune.inc.gen)
 (deps
  (glob_files *.bop))
 (action
  (with-stdout-to
   %{target}
   (pipe-stdout
    (bash "%{bin:bopkit} fmt gen-dune -- \%{bin:bopkit} fmt file")
    (run dune format-dune-file)))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.inc.gen)))

(cram
 (deps
  (glob_files *.bop)
  (package bopkit)))

(mdx
 (deps
  (package bopkit)))
