(library
 (name bit_utils_test)
 (public_name bopkit-tests.bit_utils_test)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Core)
 (libraries
  bit_utils
  core
  core_unix
  core_unix.filename_unix
  expect_test_helpers_core
  fpath)
 (inline_tests)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
