(library
 (name bopkit)
 (public_name bopkit.bopkit)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Loc0
  -open
  Err0
  -open
  Fpath_base
  -open
  Commandlang)
 (libraries
  appendable-list
  base
  bit_utils
  commandlang
  err0
  fpath
  fpath-base
  loc0
  parsing-utils
  pp)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
