(library
 (name bopkit_bdd)
 (public_name bopkit.bdd)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Base)
 (libraries base bit_utils bopkit bopkit_pp pp)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
